--- a/config.toml
+++ b/config.toml
@@ -4,4 +4,22 @@ key = "mPrah7ftuQ8KcxTmSKjb"
 email = "jorge.martinezgomez@wfp.org"
 start_date = "2020-01-01"
 
-[database]
+[iso]
+CMR = 120
+CAF = 140
+TCD = 148
+STP = 678
+BEN = 204
+BFA = 854
+GMB = 270
+GHA = 288
+GIN = 324
+GNB = 624
+LBR = 430
+MLI = 466
+MRT = 478
+NER = 562
+NGA = 566
+SEN = 686
+SLE = 694
+TGO = 768
