--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 [dependencies]
 chrono = { version = "0.4.24", features = ["serde"] }
 diesel = { version = "2.0.4", features = ["postgres", "chrono"] }
+env_logger = "0.10.0"
+log = "0.4.19"
 postgis = "0.9.0"
 reqwest = { version = "0.11.18", features = ["blocking", "json"] }
 serde = { version = "1.0.163", features = ["derive"] }
