--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 chrono = { version = "0.4.24", features = ["serde"] }
+clap = { version = "4.3.5", features = ["derive"] }
 diesel = { version = "2.0.4", features = ["postgres", "chrono"] }
 env_logger = "0.10.0"
 log = "0.4.19"
